change encryption concept
