# internals/controller/users/delete.go
@@ -3,7 +3,7 @@ package users
 import (
 	"context"
 	model "github.com/BigNutJaa/users/internals/model/users"
-
+	apiV1 "github.com/BigNutJaa/users/pkg/api/v1"
 	"github.com/opentracing/opentracing-go"
 )
 
@@ -11,21 +11,21 @@ func (c *Controller) Delete(ctx context.Context, request *apiV1.UsersDeleteReque
 	span, ctx := opentracing.StartSpanFromContextWithTracer(
 		ctx,
 		opentracing.GlobalTracer(),
-		"handler.stock.Delete",
+		"handler.users.Delete",
 	)
 	defer span.Finish()
 	span.LogKV("Input Handler", request)
-	stockData, err := c.service.Delete(ctx, &model.FitterDeleteStock{
+	stockData, err := c.service.Delete(ctx, &model.FitterDeleteUsers{
 		Id: request.GetId(),
 	})
 
 	if err != nil {
 		return nil, err
 	}
-	return &apiV1.StockDeleteResponse{
-		Name:   stockData.Name,
-		Detail: stockData.Detail,
-		Qty:    stockData.Qty,
-		Id:     stockData.Id,
+	return &apiV1.UsersDeleteResponse{
+		UserName:  stockData.User_name,
+		FirstName: stockData.First_name,
+		LastName:  stockData.Last_name,
+		Id:        stockData.Id,
 	}, nil
 }
